--- a/org.polymap.p4.data.importer/.classpath
+++ b/org.polymap.p4.data.importer/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-13.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-13.2.jar" sourcepath="lib/sources/gt-api-13.2-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-main-13.2.jar" sourcepath="lib/sources/gt-main-13.2-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-13.2.jar" sourcepath="lib/sources/gt-metadata-13.2-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-opengis-13.2.jar" sourcepath="lib/sources/gt-opengis-13.2-sources.zip"/>
