#108: Raster data (http://github.com/Polymap4/polymap4-p4/issues/issue/108)
All GeoTools jars are loaded by org.polymap.core.data. This is easier to maintain until we have a way to load *just* the needed jars in dependent plugins.

--- a/org.polymap.p4.data.importer/build.properties
+++ b/org.polymap.p4.data.importer/build.properties
@@ -5,4 +5,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
                lib/commons-compress-1.9.jar,\
                resources/,\
-               lib/gt-xsd-kml-16-RC1.jar
+               .classpath
