--- a/org.polymap.p4.data.importer/.classpath
+++ b/org.polymap.p4.data.importer/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-kml-16-RC1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-compress-1.9.jar" sourcepath="lib/sources/commons-compress-1.9-sources.zip"/>
 	<classpathentry kind="output" path="build/eclipse"/>
+	<referencedentry exported="true" kind="lib" path="lib/gt-opengis-16-RC1.jar" sourcepath="lib/sources/gt-opengis-16-RC1-sources.zip"/>
 </classpath>
