#85: Help/Feedback button (http://github.com/Mapzone/mapzone/issues/issue/85)
NEW: P4HelpPanel

--- a/org.polymap.p4/plugin.xml
+++ b/org.polymap.p4/plugin.xml
@@ -77,6 +77,11 @@
             id="org.polymap.p4.LayersCatalogsPanel"
             stackPriority="100">
       </panel>
+      <panel
+            class="org.polymap.p4.P4HelpPanel"
+            id="org.polymap.p4.P4HelpPanel"
+            stackPriority="-1000">
+      </panel>
    </extension>
    <!--extension
          point="org.polymap.service.fs.contentProviders">
