--- a/org.polymap.p4.data.importer/build.properties
+++ b/org.polymap.p4.data.importer/build.properties
@@ -5,4 +5,9 @@ bin.includes = META-INF/,\
                plugin.xml,\
                lib/commons-compress-1.9.jar,\
                resources/,\
-               .classpath
+               .classpath,\
+               lib/jgt-hortonmachine-0.8.1-SNAPSHOT.jar,\
+               lib/jgt-jgrassgears-0.8.1-SNAPSHOT.jar,\
+               lib/jgt-modules-0.8.1-SNAPSHOT.jar,\
+               lib/jgt-oms3-0.8.1-SNAPSHOT.jar,\
+               lib/jgt-dbs-0.8.1-SNAPSHOT.jar
