--- a/org.polymap.p4.data.importer/.classpath
+++ b/org.polymap.p4.data.importer/.classpath
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/gt-process-16.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgt-dbs-0.8.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgt-hortonmachine-0.8.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgt-jgrassgears-0.8.1-SNAPSHOT.jar"/>
