--- a/org.polymap.p4.data.importer/build.properties
+++ b/org.polymap.p4.data.importer/build.properties
@@ -10,4 +10,8 @@ bin.includes = META-INF/,\
                lib/jgt-jgrassgears-0.8.1-SNAPSHOT.jar,\
                lib/jgt-modules-0.8.1-SNAPSHOT.jar,\
                lib/jgt-oms3-0.8.1-SNAPSHOT.jar,\
-               lib/jgt-dbs-0.8.1-SNAPSHOT.jar
+               lib/jgt-dbs-0.8.1-SNAPSHOT.jar,\
+               lib/slf4j-api-1.7.5.jar,\
+               lib/slf4j-simple-1.7.5.jar,\
+               lib/sqlite-jdbc-3.8.11.2.jar,\
+               lib/gt-process-16.1.jar
